--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuedraggable",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "draggable component for vue",
   "license": "MIT",
   "main": "dist/vuedraggable.umd.min.js",
@@ -32,6 +32,7 @@
     "nested"
   ],
   "dependencies": {
+    "core-js": "^3.37.1",
     "sortablejs": "^1.15.0"
   },
   "peerDependencies": {
@@ -71,8 +72,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "@vue/prettier"
+      "plugin:vue/essential"
     ],
     "rules": {},
     "parserOptions": {
